VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc9Up.err
[8MB/455.5MB][  1%][>                                                 ][2.667MB/s]  [40MB/455.5MB][  8%][====>                                             ][10MB/s]  [80MB/455.5MB][ 17%][========>                                         ][16MB/s]  [120MB/455.5MB][ 26%][=============>                                    ][20MB/s]  [152MB/455.5MB][ 33%][================>                                 ][21.71MB/s]  [192MB/455.5MB][ 42%][=====================>                            ][24MB/s]  [232MB/455.5MB][ 50%][=========================>                        ][25.78MB/s]  [272MB/455.5MB][ 59%][=============================>                    ][27.2MB/s]  [304MB/455.5MB][ 66%][=================================>                ][27.64MB/s]  [344MB/455.5MB][ 75%][=====================================>            ][28.67MB/s]  [376MB/455.5MB][ 82%][=========================================>        ][28.92MB/s]  [416MB/455.5MB][ 91%][=============================================>    ][29.71MB/s]  [455.5MB/455.5MB][100%][==================================================][30.37MB/s]  [455.5MB/455.5MB][100%][==================================================][30.37MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_114234/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_114234/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
